--- a/Dexiom.Serialization/Dexiom.Serialization/Dexiom.Serialization.csproj
+++ b/Dexiom.Serialization/Dexiom.Serialization/Dexiom.Serialization.csproj
@@ -43,5 +43,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationExtensions.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Dexiom.Serialization.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
